--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <link rel="preload" as="video" href="/bg.mp4" type="video/mp4" />
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
